docs-archive/apache-airflow-providers-google/22.5.0/_sources/_api/airflow/providers/google/suite/operators/sheets/index.rst.txt
airflow.providers.google.suite.operators.sheets
===============================================

.. py:module:: airflow.providers.google.suite.operators.sheets


Classes
-------

.. autoapisummary::

   airflow.providers.google.suite.operators.sheets.GoogleSheetsCreateSpreadsheetOperator


Module Contents
---------------

.. py:class:: GoogleSheetsCreateSpreadsheetOperator(*, spreadsheet, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, drive_id = None, api_endpoint = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.version_compat.BaseOperator`


   Creates a new spreadsheet.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:GoogleSheetsCreateSpreadsheetOperator`

   :param spreadsheet: an instance of Spreadsheet
       https://developers.google.com/sheets/api/reference/rest/v4/spreadsheets#Spreadsheet
   :param gcp_conn_id: The connection ID to use when fetching connection info.
   :param drive_id: Shared Drive ID where the spreadsheet should be created.
       This is useful when using a service account, since service accounts
       do not have personal Drive storage.
       When drive_id is set, only spreadsheet["properties"]["title"] is used.
       All other properties are ignored. (templated)
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param api_endpoint: Optional. Custom API endpoint, e.g: private.googleapis.com.
       This can be used to target private VPC or restricted access endpoints.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('spreadsheet', 'impersonation_chain', 'drive_id')



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: spreadsheet


   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: api_endpoint
      :value: None



   .. py:attribute:: drive_id
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



